* Fixed coding of search queries.